# ai-work-os

./: .gitignore  01-系统架构设计.md  02-数据库结构设计.md  03-Agent-Prompt设计.md  04-MVP开发方案.md  05-代码目录结构设计.md  CONTRIBUTING.md  DELIVERY_REPORT.md  DEPLOYMENT_GUIDE.md  DESIGN_SUMMARY.md  ENHANCEMENT_REPORT.md  FINAL_DELIVERY.md  FRONTEND_COMPLETION_REPORT.md  GITHUB_UPDATE_REPORT.md  LICENSE  LOCAL_DEVELOPMENT.md  MVP_COMPLETION_REPORT.md  OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.md  docker-compose.local.yml  docker-compose.no-build.yml  docker-compose.prod.yml  docker-compose.yml  frontend-run.bat  start-backend.bat  start-frontend.bat  start-frontend.vbs  start-local.sh
backend/: .env.example  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  coordinator.py  planner.py  specialists.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  cache.py  config.py  exceptions.py  rate_limit.py  security.py
backend/app/db/: base.py  pagination.py  session.py
backend/app/llm/: __init__.py  provider.py
backend/app/models/: __init__.py  agent.py  audit_log.py  decision.py  message.py  output.py  project.py  task.py  user.py  workflow.py
backend/app/schemas/: agent.py  common.py  decision.py  message.py  output.py  project.py  task.py  user.py
backend/tests/: conftest.py  test_e2e.py
scripts/: dev.ps1  (+1 more)
(+53 files in other folders)
